fix display and spacings for default gallery and slidehow

--- a/assets/scss/components/_gallery.scss
+++ b/assets/scss/components/_gallery.scss
@@ -207,6 +207,8 @@
     clear: both;
 
     .c-slideshow & {
+		margin-top: 0;
+		margin-bottom: 0;
         padding-top: 0;
         padding-bottom: 0;
     }
